# slackstorian

./: .gitignore  Makefile  Pipfile  README.md  backup_slack.py  lambda.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
slackstorian/: __init__.py  backup_slack.py  slack_client.py
test/: conftest.py  test_acceptance.py  test_backup_slack.py  test_get_env.py  test_slack_client.py
