[tool.poetry]
name = "slackstorian"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
slacker = "^0.14.0"
boto3 = "^1.13.26"
environs = "^8.0.0"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
responses = "^0.10.14"
pytest-mock = "^3.1.1"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

